--- a/TrueFalseStarter/Base.lproj/Main.storyboard
+++ b/TrueFalseStarter/Base.lproj/Main.storyboard
@@ -82,8 +82,8 @@
                                     <action selector="nextQuestion:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lRh-TW-OEQ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PcN-rq-fso">
-                                <rect key="frame" x="303" y="486" width="36" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PcN-rq-fso">
+                                <rect key="frame" x="325" y="74" width="18" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -105,6 +105,7 @@
                             <constraint firstItem="40o-lg-mg5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="NdS-zq-lxR"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="n1d-6u-K0I" secondAttribute="bottom" constant="61" id="RKF-dT-ltJ"/>
                             <constraint firstItem="I3V-ih-1Ky" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="24" id="SEs-x7-afv"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="PcN-rq-fso" secondAttribute="trailing" constant="16" id="U0Z-0o-iy0"/>
                             <constraint firstItem="40o-lg-mg5" firstAttribute="top" secondItem="I3V-ih-1Ky" secondAttribute="bottom" constant="40" id="VJJ-fx-w6B"/>
                             <constraint firstAttribute="trailingMargin" secondItem="n1d-6u-K0I" secondAttribute="trailing" constant="20" id="c5c-XU-DjU"/>
                             <constraint firstItem="R17-U4-Rel" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="jaO-b1-5Vw"/>
@@ -112,6 +113,7 @@
                             <constraint firstItem="okp-1h-utF" firstAttribute="top" secondItem="J3F-q6-La1" secondAttribute="bottom" constant="28" id="rRk-h0-uc7"/>
                             <constraint firstItem="J3F-q6-La1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="tgU-8S-EWY"/>
                             <constraint firstItem="20G-im-gvI" firstAttribute="top" secondItem="R17-U4-Rel" secondAttribute="bottom" constant="26" id="uZA-Jp-LMr"/>
+                            <constraint firstItem="PcN-rq-fso" firstAttribute="top" secondItem="I3V-ih-1Ky" secondAttribute="bottom" constant="10.5" id="zpP-80-iea"/>
                         </constraints>
                     </view>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
