--- a/TrueFalseStarter/Base.lproj/Main.storyboard
+++ b/TrueFalseStarter/Base.lproj/Main.storyboard
@@ -70,8 +70,14 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1d-6u-K0I">
-                                <rect key="frame" x="36" y="573" width="303" height="33"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PcN-rq-fso">
+                                <rect key="frame" x="325" y="74" width="18" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1d-6u-K0I">
+                                <rect key="frame" x="36" y="594" width="303" height="33"/>
                                 <color key="backgroundColor" red="0.066666666666666666" green="0.50980392156862742" blue="0.45490196078431372" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <color key="tintColor" red="1" green="1" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -82,12 +88,6 @@
                                     <action selector="nextQuestion:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lRh-TW-OEQ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PcN-rq-fso">
-                                <rect key="frame" x="325" y="74" width="18" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.031372549019607843" green="0.16862745098039217" blue="0.24313725490196078" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -103,13 +103,14 @@
                             <constraint firstItem="J3F-q6-La1" firstAttribute="top" secondItem="40o-lg-mg5" secondAttribute="bottom" constant="31" id="MZz-Al-6FO"/>
                             <constraint firstAttribute="trailingMargin" secondItem="40o-lg-mg5" secondAttribute="trailing" constant="20" id="Mar-Ru-Oee"/>
                             <constraint firstItem="40o-lg-mg5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="NdS-zq-lxR"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="n1d-6u-K0I" secondAttribute="bottom" constant="61" id="RKF-dT-ltJ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="n1d-6u-K0I" secondAttribute="bottom" constant="40" id="RKF-dT-ltJ"/>
                             <constraint firstItem="I3V-ih-1Ky" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="24" id="SEs-x7-afv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="PcN-rq-fso" secondAttribute="trailing" constant="16" id="U0Z-0o-iy0"/>
                             <constraint firstItem="40o-lg-mg5" firstAttribute="top" secondItem="I3V-ih-1Ky" secondAttribute="bottom" constant="40" id="VJJ-fx-w6B"/>
                             <constraint firstAttribute="trailingMargin" secondItem="n1d-6u-K0I" secondAttribute="trailing" constant="20" id="c5c-XU-DjU"/>
                             <constraint firstItem="R17-U4-Rel" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="jaO-b1-5Vw"/>
                             <constraint firstItem="okp-1h-utF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="lBL-3D-8W2"/>
+                            <constraint firstItem="n1d-6u-K0I" firstAttribute="top" secondItem="20G-im-gvI" secondAttribute="bottom" constant="30" id="mXD-mT-VaC"/>
                             <constraint firstItem="okp-1h-utF" firstAttribute="top" secondItem="J3F-q6-La1" secondAttribute="bottom" constant="28" id="rRk-h0-uc7"/>
                             <constraint firstItem="J3F-q6-La1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="tgU-8S-EWY"/>
                             <constraint firstItem="20G-im-gvI" firstAttribute="top" secondItem="R17-U4-Rel" secondAttribute="bottom" constant="26" id="uZA-Jp-LMr"/>
@@ -124,6 +125,7 @@
                         <outlet property="answer3Button" destination="R17-U4-Rel" id="0Gc-iP-bze"/>
                         <outlet property="answer4Button" destination="20G-im-gvI" id="bjx-hv-8tL"/>
                         <outlet property="commentLabel" destination="40o-lg-mg5" id="NSB-Vf-JCc"/>
+                        <outlet property="nextQuestionButton" destination="n1d-6u-K0I" id="Igs-N0-p95"/>
                         <outlet property="questionField" destination="I3V-ih-1Ky" id="7UI-o2-ATi"/>
                         <outlet property="timerLabel" destination="PcN-rq-fso" id="C1H-9z-tCy"/>
                     </connections>
